src/test/ui/block-result/block-must-not-have-result-res.stderr
error[E0308]: mismatched types
  --> $DIR/block-must-not-have-result-res.rs:5:9
   |
LL |     fn drop(&mut self) {
   |                        - expected `()` because of default return type
LL |         true
   |         ^^^^ expected (), found bool
   |
   = note: expected type `()`
              found type `bool`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
